Update facebook + web design links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
   <p class="foot">
-    Be sure to <a href="https://www.facebook.com/pages/Tango-Sydney/355994214414880" title="Like us on Facebook!">Like us on Facebook!</a>
+    Be sure to <a href="https://www.facebook.com/tangosydney/" title="Like us on Facebook!">Like us on Facebook!</a>
     <br />
-    Web Design by <a href="http://www.ensquared.net/">Glenn Grant</a> Copyright &copy; 2007 All Rights Reserved
+    Web Design by <a href="http://www.devalias.net/">Glenn Grant</a> Copyright &copy; 2007 All Rights Reserved
   </p>
 
   <div style="margin-top: -18px;">
