--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <link type="text/css" rel="stylesheet" href="style.css" media="all" />
 <!--  <link rel="stylesheet" href="jquery.twitter/jquery.twitter.css" type="text/css" media="all" />-->
 
-  <script src="https://widgets.twimg.com/j/2/widget.js"></script>
+<!--  <script src="https://widgets.twimg.com/j/2/widget.js"></script>-->
 <!--  <script type="text/javascript" src="jquery.twitter/jquery-1.3.2.min.js"></script>-->
 <!--  <script type="text/javascript" src="jquery.twitter/jquery.twitter.js"></script>-->
 
